[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Florian Vallée <florian@vallee.xyz>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aoc-runner = "*" 
aoc-runner-derive = "*"
#counter = "0.5.2"
regex = "1"
itertools = "*"
#rayon = "1.5.0"
lazy_static = "*"
#rc-dlist-deque = "1.0.0"

wasm-bindgen = "0.2.63"
web-sys = { version = "*", features = ["console"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
